# slime

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: Application.cpp.C22467B8E4DB011C.idx  Application.h.3ECD9319DBC9110F.idx  EntryPoint.h.75836C083C1EC700.idx  Image.cpp.01F36348D2991000.idx  Image.h.9D76AC1FE519DD3E.idx  Input.cpp.8D7CEE4585D0BA7F.idx  Input.h.8B1445B838F2BF00.idx  KeyCodes.h.0248DC00862BDC2D.idx  Layer.h.1566CEF575BDF9BE.idx  _fixes.hpp.08F690782023CAF5.idx  _vectorize.hpp.4E5FFACE2D22FC23.idx  common.hpp.5F2627293A651C93.idx  compute_common.hpp.1BC761007D016EB3.idx  compute_vector_relational.hpp.02CD8671D61053F9.idx  constants.hpp.59D6DCC6255BBEC6.idx  constants.inl.C8933917F1219623.idx  context.c.4A97DA89C2DD9FDF.idx  egl_context.c.2C88B5340CCF337C.idx  exponential.hpp.506E39D3089CB11B.idx  func_common.inl.73FF81BC33231209.idx  func_exponential.inl.69B06A235342ECC2.idx  func_geometric.inl.C9D52A7A2ADD3C5F.idx  func_integer.inl.9C28023265420EA3.idx  func_matrix.inl.06597E4CB5D66FC2.idx  func_packing.inl.5A3A28D8F3447EDF.idx  func_trigonometric.inl.503E09C6C7FB9737.idx  func_vector_relational.inl.99C79BDC42B55A66.idx  fwd.hpp.CA62F3E659C5E478.idx  geometric.hpp.1B93FD642AC89D4F.idx  glfw3.h.3AF033440D83068A.idx  glm.hpp.B5D7E0E4369A51C1.idx  glx_context.c.7EFEC8A5E62C3FF4.idx  imconfig.h.7FE0A5147702966C.idx  imgui.cpp.1F85F5409422CDA3.idx  imgui.h.024BAF374BED2163.idx  imgui_demo.cpp.F0351BBEFC2D81E8.idx  imgui_draw.cpp.16A7CFEAD99A0A07.idx  imgui_impl_glfw.cpp.3EE9DC247AEA0536.idx  (+161 more)
src/: a.out  main.cpp  main.h  tests.cpp
